# TAGxCHAIN

./: .env.example  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20210901_1249.py  0003_auto_20211018_1614.py  0004_auto_20211018_1619.py  0005_platformsettingsenabled.py  0006_auto_20211018_1658.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_scripts.py
static/css/: main.css
static/css/accounts/: login.css  my_account.css
static/css/components/: footer.css  rightbar.css  search-bar.css  sidebar.css
tagxchain/: asgi.py  settings.py  urls.py  wsgi.py
templates/: authenticated.html  base.html  non-authenticated.html  trades.html
templates/accounts/: login.html  my_account.html  register.html
templates/components/: form.html
templates/components/helpers/: footer.html  rightbar.html  search-bar.html  sidebar.html
templates/components/trades/: overview_card.html  trades_list.html
templates/components/widgets/: chart-widget.html  chart.html  crypto-mkt-screener.html  economic-calendar.html  forex-cross-rates.html  forex-heat-map.html  fundamental-data-widget.html  market-movers.html  market-overview.html  (+11 more)
templates/core/: home.html
templates/trades/: trades_overview.html
trades/: admin.py  forms.py  helpers.py  me.py  models.py  urls.py  views.py
trades/migrations/: 0001_initial.py  0002_alter_tradingday_charges.py  0003_auto_20211018_1329.py  0004_tradingday_is_front.py
(+13 files in other folders)
