[tool.poetry]
name = "tagxchain"
version = "0.1.0"
description = ""
authors = ["Manoj Tyagi <tyagimanojtyagi.22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.4.1"
defusedxml = "0.7.1"
diff-match-patch = "20200713"
dj-database-url = "0.5.0"
django = "3.2.6"
django-crispy-forms = "1.12.0"
django-import-export = "2.5.0"
django-widget-tweaks = "1.4.8"
djangorestframework = "3.12.4"
et-xmlfile = "1.1.0"
gunicorn = "20.1.0"
markuppy = "1.14"
odfpy = "1.4.1"
openpyxl = "3.0.7"
pillow = "8.3.1"
psycopg2-binary = "2.9.1"
pytz = "2021.1"
pyyaml = "5.4.1"
sqlparse = "0.4.1"
tablib = "3.0.0"
whitenoise = "5.3.0"
xlrd = "2.0.1"
xlwt = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
